feat(runtime): add `computation` and `effect` operations
Close #271

--- a/features/steps/.workspace/components/collection/node.syntaxes/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/node.syntaxes/manifest.toa.yaml
@@ -26,6 +26,18 @@ operations:
     output: string
   assignment_factory:
     output: string
+  computation_function:
+    output: string
+  computation_class:
+    output: string
+  computation_factory:
+    output: string
+  effect_function:
+    output: string
+  effect_class:
+    output: string
+  effect_factory:
+    output: string
 
 configuration:
   foo: 'bar'
