test: fix integration tests

--- a/integration/dummies/a/manifest.toa.yaml
+++ b/integration/dummies/a/manifest.toa.yaml
@@ -22,7 +22,7 @@ operations:
       length: .
 
 receivers:
-  messages.messages.created: transit
+  messages.created: transit
 
 extensions:
   exposition:
