refactor(norm): allow additional properties

--- a/features/steps/.workspace/components/collection/echo.responder/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/echo.responder/manifest.toa.yaml
@@ -5,3 +5,8 @@ operations:
   echo:
     input: string
     output: string
+  reflect:
+    input:
+      id: string
+      ...: true
+    output: object
