--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -24,7 +24,8 @@
     "@toa.io/generic": "0.9.0",
     "@toa.io/norm": "0.10.1-dev.0",
     "@toa.io/schema": "0.7.3",
-    "clone-deep": "4.0.1"
+    "clone-deep": "4.0.1",
+    "dotenv": "16.0.3"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
