refactor!: allow `effects` to be referenced by receivers
BREAKING CHANGE: `transition`
receiver's definition property has been renamed to `operation`

--- a/userland/example/components/tea.pots/manifest.toa.yaml
+++ b/userland/example/components/tea.pots/manifest.toa.yaml
@@ -4,7 +4,7 @@ namespace: tea
 entity:
   storage: mongodb
   schema:
-    material*: [glass, ceramic, steel]
+    material*: [ glass, ceramic, steel ]
     volume: number
     booked: false
 
@@ -21,7 +21,7 @@ operations:
 
 receivers:
   store.orders.created:
-    transition: transit
+    operation: transit
     binding: amqp # avoid discovery
 
 configuration:
