fix(core): fix non-adaptive receiver

--- a/features/steps/.workspace/components/collection/state.known/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/state.known/manifest.toa.yaml
@@ -10,4 +10,6 @@ operations:
     output: number
 
 receivers:
-  something_happened: set
+  somewhere.something.happened:
+    operation: set
+    binding: amqp
