feat: receivers for effects (#299)
* fix(stage): remove `TOA_DEV=1`

Close #293

* test(features): remove obsolete scenario

* refactor: move `dotenv` to `boot`

Close #292

* test(features): fix ECONNREFUSED scenario

* test(features): refactor `boot` to `stage`

* test(features): refactor `set` methods for `state.*` components to effect

* refactor!: allow `effects` to be referenced by receivers

BREAKING CHANGE: `transition`
receiver's definition property has been renamed to `operation`

* fix(core): fix non-adaptive receiver

* test: fix integration tests

--- a/features/steps/.workspace/components/collection/state.known/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/state.known/manifest.toa.yaml
@@ -5,8 +5,11 @@ entity: null
 
 operations:
   set:
-    concurrency: retry
-    query: false
     input: number
   get:
     output: number
+
+receivers:
+  somewhere.something.happened:
+    operation: set
+    binding: amqp
