test(samples): add state extension sample

--- a/userland/example/components/echo/manifest.toa.yaml
+++ b/userland/example/components/echo/manifest.toa.yaml
@@ -3,6 +3,10 @@ name: echo
 operations:
   signal:
     output: string
+  get:
+    output: string
+  set:
+    input: string
 
 configuration:
   signal: quack
