--- a/userland/example/components/echo/samples/get.yaml
+++ b/userland/example/components/echo/samples/get.yaml
@@ -5,3 +5,8 @@ extensions:
         value: bar
       permanent: true
 output: bar
+---
+title: Should return value (declaration with a shortcut)
+state:
+  value: bar
+output: bar
