--- a/userland/example/components/echo/manifest.toa.yaml
+++ b/userland/example/components/echo/manifest.toa.yaml
@@ -5,8 +5,9 @@ operations:
     output: string
   get:
     output: string
-  set:
+  resolve:
     input: string
+    output: string
 
 configuration:
   signal: quack
