feat(samples): aspect type hints (#304)
* test(samples): add state extension sample

* test(features): add state sample shortcut

* feat(samples): add `state` shortcut

Close #303

* docs(samples): add aspect type hints

* feat(generic): add `map` and `plain`

* docs(sampling): export Extensions type

* feat(samples): add aspect result type hints

`Map` implemented

* feat(samples): add `Set`, `sync`, `async` aspect type hints

Close #302

--- a/userland/example/components/echo/manifest.toa.yaml
+++ b/userland/example/components/echo/manifest.toa.yaml
@@ -3,6 +3,11 @@ name: echo
 operations:
   signal:
     output: string
+  get:
+    output: string
+  resolve:
+    input: string
+    output: string
 
 configuration:
   signal: quack
