--- a/extensions/sampling/package.json
+++ b/extensions/sampling/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@toa.io/core": "1.1.0-dev.0",
     "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/schemas": "0.8.4-dev.0"
+    "@toa.io/schemas": "0.8.4-dev.0",
+    "jest-diff": "29.5.0"
   }
 }
