--- a/extensions/sampling/package.json
+++ b/extensions/sampling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.sampling",
-  "version": "0.8.1-dev.1",
+  "version": "0.8.1-dev.0",
   "description": "Toa operations sampling",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -21,6 +21,7 @@
   "dependencies": {
     "@toa.io/core": "1.1.0-dev.1",
     "@toa.io/generic": "0.11.0-dev.1",
-    "@toa.io/schemas": "0.8.4-dev.1"
+    "@toa.io/schemas": "0.8.4-dev.1",
+    "jest-diff": "29.5.0"
   }
 }
