refactor(operations): make ingress class optional

--- a/operations/src/deployment/chart/templates/services.yaml
+++ b/operations/src/deployment/chart/templates/services.yaml
@@ -47,7 +47,9 @@ metadata:
 {{ toYaml .ingress.annotations | indent 4 }}
   {{- end }}
 spec:
-  ingressClassName: {{ required "ingress.class is required" .ingress.class }}
+  {{- if .ingress.class }}
+  ingressClassName: {{ .ingress.class }}
+  {{- end }}
   rules:
     - host: {{ required "ingress.host is required" .ingress.host }}
       http:
