--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
     "test:features": "npx cucumber-js",
     "test:features:unit": "npx cucumber-js -p schema && npx cucumber-js -p norm",
-    "test:samples": "toa replay userland/example",
+    "test:samples": "TOA_DEV=1 toa replay userland/example",
     "test:all": "npm run test && npm run test:integration && npm run test:samples && npm run test:features",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
