--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "extensions/*",
     "libraries/*",
     "operations",
-    "userland"
+    "userland",
+    "types"
   ],
   "engines": {
     "node": ">= 12.0.0"
