feat(core)!: enable strict types

--- a/runtime/core/src/contract/schemas/error.yaml
+++ b/runtime/core/src/contract/schemas/error.yaml
@@ -1,7 +1,8 @@
+type: object
 properties:
   code:
     type: integer
     minimum: 0
   message:
     type: string
-required: [code, message]
+required: [ code, message ]
