refactor(origins): remove `TOA_DEV=1` allowance

--- a/features/steps/.workspace/components/collection/origins.http_absolute/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/origins.http_absolute/manifest.toa.yaml
@@ -1,8 +1,10 @@
-name: http
+name: http_absolute
 namespace: origins
 
 operations:
-  test:
+  get:
+    input:
+      url: uri
     output: object
 
 origins: ~
