chore(runtime): add root version sync

--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -19,7 +19,8 @@
     "toa": "bin/toa"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "postversion": "jq --argjson value \"$(jq '.version' package.json)\" '.version = $value' ../../package.json > tmp.json && mv tmp.json ../../package.json"
   },
   "dependencies": {
     "@toa.io/bindings.amqp": "0.7.6-dev.13",
