feat(filesystem): add `directories`

--- a/libraries/filesystem/package.json
+++ b/libraries/filesystem/package.json
@@ -22,10 +22,8 @@
     "access": "public"
   },
   "main": "source/index.js",
-  "devDependencies": {
-    "@toa.io/generic": "0.11.0-dev.13"
-  },
   "dependencies": {
+    "@toa.io/generic": "0.11.0-dev.13",
     "fast-glob": "3.2.12",
     "find-up": "5.0.0"
   }
