--- a/userland/example/components/math.calculations/samples/increment.yaml
+++ b/userland/example/components/math.calculations/samples/increment.yaml
@@ -1,6 +1,7 @@
 title: Should increment number
 input:
   value: 1
+  times: 1
 output: 2
 local:
   add:
@@ -9,12 +10,7 @@ local:
       b: 1
     output: 2
 ---
-title: Should increment with actual call
-input:
-  value: 2
-output: 3
----
-title: Should increment twice (with second actual call)
+title: Should increment twice
 input:
   value: 0
   times: 2
@@ -28,3 +24,4 @@ local:
     - input:
         a: 1
         b: 1
+      output: 2
