feat(origins): forbid credentials declaration

--- a/package.json
+++ b/package.json
@@ -51,13 +51,14 @@
   },
   "scripts": {
     "prepare": "npx husky install",
-    "test": "npm run test:lint && npm run test:unit && npm run test:features:unit",
+    "test": "npm run test:lint && npm run test:unit && npm run test:features:unit && npm run test:samples:unit",
     "test:lint": "npx standard --verbose | npx snazzy",
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
     "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
     "test:features": "npx cucumber-js",
-    "test:features:unit": "npx cucumber-js -p schema && npx cucumber-js -p norm",
-    "test:samples": "TOA_DEV=1 toa replay userland/example",
+    "test:features:unit": "npx cucumber-js -p norm",
+    "test:samples:unit": "toa replay userland/example/components/*",
+    "test:samples:all": "TOA_DEV=1 toa replay userland/example",
     "test:all": "npm run test && npm run test:integration && npm run test:samples && npm run test:features",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
