--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@toa.io/extensions.exposition",
   "version": "0.8.3-dev.16",
-  "description": "Toa Resources Exposition",
+  "description": "Toa Exposition",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
-  "main": "src/index.js",
+  "main": "source/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toa-io/toa.git"
