test(forward): add scenario with forward with object input

--- a/features/steps/.workspace/components/collection/echo.beacon/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/echo.beacon/manifest.toa.yaml
@@ -17,3 +17,9 @@ operations:
     forward: echo
     input: ok
     output: string
+  fwd:
+    forward: reflect
+    input:
+      id: ok
+      ...: true
+    output: object
