--- a/connectors/bindings.loop/package.json
+++ b/connectors/bindings.loop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/bindings.loop",
-  "version": "0.7.5-dev.16",
+  "version": "0.7.5-canary.0",
   "description": "Toa Loop Binding",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,7 +19,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/generic": "0.11.0-dev.16"
+    "@toa.io/generic": "0.11.0-canary.0"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
