--- a/connectors/storages.queues/package.json
+++ b/connectors/storages.queues/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/storages.queues",
-  "version": "0.7.6-dev.16",
+  "version": "0.7.6-canary.0",
   "description": "Toa Queues Storage Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,7 +19,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "1.1.0-dev.16",
-    "@toa.io/generics.amqp": "0.9.0-dev.3"
+    "@toa.io/core": "1.1.0-canary.0",
+    "@toa.io/generics.amqp": "0.9.0-canary.0"
   }
 }
