--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.exposition",
-  "version": "0.8.3-dev.16",
+  "version": "0.8.3-canary.0",
   "description": "Toa Resources Exposition",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -22,12 +22,12 @@
     "@types/express": "4.17.13"
   },
   "dependencies": {
-    "@toa.io/bindings.amqp": "0.7.6-dev.16",
+    "@toa.io/bindings.amqp": "0.7.6-canary.0",
     "@toa.io/console": "0.6.0",
-    "@toa.io/core": "1.1.0-dev.16",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/schema": "0.7.6-dev.16",
-    "@toa.io/yaml": "0.7.6-dev.16",
+    "@toa.io/core": "1.1.0-canary.0",
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/schema": "0.7.6-canary.0",
+    "@toa.io/yaml": "0.7.6-canary.0",
     "cors": "2.8.5",
     "express": "4.18.1",
     "path-to-regexp": "6.2.0"
