--- a/extensions/sampling/package.json
+++ b/extensions/sampling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.sampling",
-  "version": "0.9.0-dev.14",
+  "version": "0.9.0-canary.0",
   "description": "Toa operations sampling",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,9 +19,9 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "1.1.0-dev.16",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/schemas": "0.8.4-dev.16",
+    "@toa.io/core": "1.1.0-canary.0",
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/schemas": "0.8.4-canary.0",
     "jest-diff": "29.5.0"
   }
 }
