--- a/libraries/mock/package.json
+++ b/libraries/mock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/mock",
-  "version": "0.7.9-dev.16",
+  "version": "0.7.9-canary.0",
   "description": "Toa Mocks",
   "homepage": "https://toa.io",
   "author": {
@@ -24,9 +24,9 @@
   "main": "source/index.js",
   "types": "types/index.d.ts",
   "devDependencies": {
-    "@toa.io/norm": "1.1.0-dev.0"
+    "@toa.io/norm": "1.1.0-canary.0"
   },
   "dependencies": {
-    "@toa.io/generic": "0.11.0-dev.16"
+    "@toa.io/generic": "0.11.0-canary.0"
   }
 }
