--- a/libraries/pointer/package.json
+++ b/libraries/pointer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/pointer",
-  "version": "0.8.4-dev.16",
+  "version": "0.8.4-canary.0",
   "description": "Toa Pointer",
   "homepage": "https://toa.io",
   "author": {
@@ -24,8 +24,8 @@
   "main": "source/index.js",
   "dependencies": {
     "@toa.io/console": "0.6.0",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/schemas": "0.8.4-dev.16",
-    "@toa.io/yaml": "0.7.6-dev.16"
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/schemas": "0.8.4-canary.0",
+    "@toa.io/yaml": "0.7.6-canary.0"
   }
 }
