--- a/libraries/schema/package.json
+++ b/libraries/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/schema",
-  "version": "0.7.6-dev.16",
+  "version": "0.7.6-canary.0",
   "description": "Toa Schema",
   "homepage": "https://toa.io",
   "author": {
@@ -23,9 +23,9 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/schemas": "0.8.4-dev.16",
-    "@toa.io/yaml": "0.7.6-dev.16",
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/schemas": "0.8.4-canary.0",
+    "@toa.io/yaml": "0.7.6-canary.0",
     "ajv": "8.12.0",
     "ajv-formats": "2.1.1"
   }
