--- a/libraries/schemas/package.json
+++ b/libraries/schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/schemas",
-  "version": "0.8.4-dev.16",
+  "version": "0.8.4-canary.0",
   "description": "Toa Schemas",
   "homepage": "https://toa.io",
   "author": {
@@ -23,10 +23,10 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/concise": "0.11.0-dev.3",
-    "@toa.io/filesystem": "1.1.0-dev.2",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/yaml": "0.7.6-dev.16",
+    "@toa.io/concise": "0.11.0-canary.0",
+    "@toa.io/filesystem": "1.1.0-canary.0",
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/yaml": "0.7.6-canary.0",
     "ajv": "8.12.0",
     "ajv-formats": "2.1.1"
   }
