--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/cli",
-  "version": "1.1.0-dev.16",
+  "version": "1.1.0-canary.0",
   "description": "Toa CLI",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -23,10 +23,10 @@
   },
   "dependencies": {
     "@toa.io/console": "0.6.0",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/kubernetes": "0.7.5-dev.16",
-    "@toa.io/norm": "1.1.0-dev.0",
-    "@toa.io/yaml": "0.7.6-dev.16",
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/kubernetes": "0.7.5-canary.0",
+    "@toa.io/norm": "1.1.0-canary.0",
+    "@toa.io/yaml": "0.7.6-canary.0",
     "find-up": "5.0.0",
     "yargs": "17.6.2"
   },
