--- a/userland/package.json
+++ b/userland/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/userland",
-  "version": "1.2.0-dev.16",
+  "version": "1.2.0-canary.0",
   "description": "Toa development kit",
   "homepage": "https://toa.io",
   "author": {
@@ -24,14 +24,14 @@
   "main": "src/index.js",
   "types": "types/index.d.ts",
   "dependencies": {
-    "@toa.io/boot": "1.1.0-dev.2",
-    "@toa.io/core": "1.1.0-dev.16",
-    "@toa.io/filesystem": "1.1.0-dev.2",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/norm": "1.1.0-dev.0",
-    "@toa.io/schemas": "0.8.4-dev.16",
+    "@toa.io/boot": "1.1.0-canary.0",
+    "@toa.io/core": "1.1.0-canary.0",
+    "@toa.io/filesystem": "1.1.0-canary.0",
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/norm": "1.1.0-canary.0",
+    "@toa.io/schemas": "0.8.4-canary.0",
     "@toa.io/storages.null": "0.6.0",
-    "@toa.io/yaml": "0.7.6-dev.16",
+    "@toa.io/yaml": "0.7.6-canary.0",
     "tap": "16.3.4"
   }
 }
