--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -28,5 +28,6 @@
   },
   "devDependencies": {
     "@types/node-fetch": "2.6.2"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
