--- a/libraries/conveyor/package.json
+++ b/libraries/conveyor/package.json
@@ -24,5 +24,6 @@
   "main": "source/index.js",
   "devDependencies": {
     "@toa.io/generic": "0.11.0-canary.0"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
