--- a/libraries/yaml/package.json
+++ b/libraries/yaml/package.json
@@ -29,5 +29,6 @@
   },
   "devDependencies": {
     "@types/js-yaml": "4.0.5"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
