--- a/types/package.json
+++ b/types/package.json
@@ -14,5 +14,6 @@
   "types": "source/index.d.ts",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
