--- a/connectors/generics.amqp/package.json
+++ b/connectors/generics.amqp/package.json
@@ -24,5 +24,6 @@
     "@toa.io/generic": "0.11.0-canary.0",
     "@toa.io/pointer": "0.8.4-canary.0",
     "comq": "0.7.0"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
