--- a/connectors/storages.queues/package.json
+++ b/connectors/storages.queues/package.json
@@ -21,5 +21,6 @@
   "dependencies": {
     "@toa.io/core": "1.1.0-canary.0",
     "@toa.io/generics.amqp": "0.9.0-canary.0"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
