--- a/extensions/configuration/package.json
+++ b/extensions/configuration/package.json
@@ -21,5 +21,6 @@
     "@toa.io/schema": "0.7.6-canary.0",
     "@toa.io/yaml": "0.7.6-canary.0",
     "clone-deep": "4.0.1"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
