--- a/extensions/state/package.json
+++ b/extensions/state/package.json
@@ -17,5 +17,6 @@
   },
   "dependencies": {
     "@toa.io/generic": "0.11.0-canary.0"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
