--- a/libraries/concise/package.json
+++ b/libraries/concise/package.json
@@ -28,5 +28,6 @@
   "dependencies": {
     "@toa.io/generic": "0.11.0-canary.0",
     "@toa.io/yaml": "0.7.6-canary.0"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
