--- a/libraries/filesystem/package.json
+++ b/libraries/filesystem/package.json
@@ -26,5 +26,6 @@
     "@toa.io/generic": "0.11.0-canary.0",
     "fast-glob": "3.2.12",
     "find-up": "5.0.0"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
