--- a/libraries/generic/package.json
+++ b/libraries/generic/package.json
@@ -24,5 +24,6 @@
   "main": "source/index.js",
   "dependencies": {
     "uuid": "9.0.0"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
