--- a/userland/package.json
+++ b/userland/package.json
@@ -33,5 +33,6 @@
     "@toa.io/storages.null": "0.6.0",
     "@toa.io/yaml": "0.7.6-canary.0",
     "tap": "16.3.4"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
