feat(cli): add `compose --dock --kill` (#341)
* docs(cli): add `compose`

* test(features): add `toa compose --kill`

* feat(cli): add `compose --kill`

Close #336

* feat(generic): add `pick`

* feat(cli): add `compose --dock`

* chore: remove obsolete `.devcontainer`

* chore: update package-lock

* ci: prerelease

 - @toa.io/bindings.amqp@0.7.6-canary.0
 - @toa.io/bindings.http@0.7.6-canary.0
 - @toa.io/bindings.loop@0.7.5-canary.0
 - @toa.io/bridges.node@0.9.3-canary.0
 - @toa.io/generics.amqp@0.9.0-canary.0
 - @toa.io/storages.mongodb@0.7.6-canary.0
 - @toa.io/storages.queues@0.7.6-canary.0
 - @toa.io/storages.sql@0.7.6-canary.0
 - @toa.io/extensions.configuration@1.1.0-canary.0
 - @toa.io/extensions.exposition@0.8.3-canary.0
 - @toa.io/extensions.origins@0.10.0-canary.0
 - @toa.io/extensions.sampling@0.9.0-canary.0
 - @toa.io/extensions.state@0.8.4-canary.0
 - @toa.io/concise@0.11.0-canary.0
 - @toa.io/conveyor@0.7.5-canary.0
 - @toa.io/filesystem@1.1.0-canary.0
 - @toa.io/generic@0.11.0-canary.0
 - @toa.io/kubernetes@0.7.5-canary.0
 - @toa.io/mock@0.7.9-canary.0
 - @toa.io/pointer@0.8.4-canary.0
 - @toa.io/schema@0.7.6-canary.0
 - @toa.io/schemas@0.8.4-canary.0
 - @toa.io/tomato@0.7.5-canary.0
 - @toa.io/yaml@0.7.6-canary.0
 - @toa.io/operations@0.8.0-canary.0
 - @toa.io/boot@1.1.0-canary.0
 - @toa.io/cli@1.1.0-canary.0
 - @toa.io/core@1.1.0-canary.0
 - @toa.io/norm@1.1.0-canary.0
 - @toa.io/runtime@0.7.10-canary.0
 - @toa.io/types@0.0.3-canary.0
 - @toa.io/userland@1.2.0-canary.0

* chore: release canary

* ci: prerelease

 - @toa.io/bindings.amqp@0.7.6-canary.1
 - @toa.io/bindings.http@0.7.6-canary.1
 - @toa.io/bindings.loop@0.7.5-canary.1
 - @toa.io/bridges.node@0.9.3-canary.1
 - @toa.io/generics.amqp@0.9.0-canary.1
 - @toa.io/storages.mongodb@0.7.6-canary.1
 - @toa.io/storages.queues@0.7.6-canary.1
 - @toa.io/storages.sql@0.7.6-canary.1
 - @toa.io/extensions.configuration@1.1.0-canary.1
 - @t

--- a/features/steps/.workspace/context.toa.yaml
+++ b/features/steps/.workspace/context.toa.yaml
@@ -4,6 +4,9 @@ packages: 'components/*'
 registry:
   base: localhost:5000
   platforms: ~
-amqp: amqp://host.docker.internal
-mongodb: mongodb://host.docker.internal
-sql: pg://host.docker.internal/integration
+amqp: amqp://localhost
+amqp@docker: amqp://host.docker.internal
+mongodb: mongodb://localhost
+mongodb@docker: mongodb://host.docker.internal
+sql: pg://localhost
+sql@docker: pg://host.docker.internal
