--- a/connectors/bindings.http/package.json
+++ b/connectors/bindings.http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/bindings.http",
-  "version": "0.7.6-dev.16",
+  "version": "0.7.6-canary.1",
   "description": "Toa HTTP Binding",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "@toa.io/console": "0.6.0",
-    "@toa.io/core": "1.1.0-dev.16",
+    "@toa.io/core": "1.1.0-canary.1",
     "agentkeepalive": "4.2.1",
     "express": "4.18.1",
     "node-fetch": "2.6.7"
   },
-  "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
