--- a/connectors/generics.amqp/package.json
+++ b/connectors/generics.amqp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/generics.amqp",
-  "version": "0.9.0-dev.3",
+  "version": "0.9.0-canary.1",
   "description": "Toa Generic AMQP Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,9 +20,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "1.1.0-dev.16",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/pointer": "0.8.4-dev.16",
+    "@toa.io/core": "1.1.0-canary.1",
+    "@toa.io/generic": "0.11.0-canary.1",
+    "@toa.io/pointer": "0.8.4-canary.1",
     "comq": "0.7.0"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
