--- a/libraries/yaml/package.json
+++ b/libraries/yaml/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/yaml",
-  "version": "0.7.6-dev.16",
+  "version": "0.7.6-canary.1",
   "description": "Toa YAML",
   "homepage": "https://toa.io",
   "author": {
@@ -23,11 +23,12 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/filesystem": "1.1.0-dev.2",
-    "@toa.io/generic": "0.11.0-dev.16",
+    "@toa.io/filesystem": "1.1.0-canary.1",
+    "@toa.io/generic": "0.11.0-canary.1",
     "js-yaml": "4.1.0"
   },
   "devDependencies": {
     "@types/js-yaml": "4.0.5"
-  }
+  },
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
