--- a/operations/package.json
+++ b/operations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/operations",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.1",
   "description": "Toa Deployment",
   "homepage": "https://toa.io",
   "author": {
@@ -26,10 +26,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/filesystem": "1.1.0-dev.2",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/yaml": "0.7.6-dev.16",
+    "@toa.io/filesystem": "1.1.0-canary.1",
+    "@toa.io/generic": "0.11.0-canary.1",
+    "@toa.io/yaml": "0.7.6-canary.1",
     "execa": "5.1.1"
   },
-  "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
