--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/cli",
-  "version": "1.1.0-dev.16",
+  "version": "1.1.0-canary.1",
   "description": "Toa CLI",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -23,12 +23,12 @@
   },
   "dependencies": {
     "@toa.io/console": "0.6.0",
-    "@toa.io/generic": "0.11.0-dev.16",
-    "@toa.io/kubernetes": "0.7.5-dev.16",
-    "@toa.io/norm": "1.1.0-dev.0",
-    "@toa.io/yaml": "0.7.6-dev.16",
+    "@toa.io/generic": "0.11.0-canary.1",
+    "@toa.io/kubernetes": "0.7.5-canary.1",
+    "@toa.io/norm": "1.1.0-canary.1",
+    "@toa.io/yaml": "0.7.6-canary.1",
     "find-up": "5.0.0",
     "yargs": "17.6.2"
   },
-  "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
