--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/runtime",
-  "version": "0.7.10-dev.17",
+  "version": "0.7.10-canary.1",
   "description": "Toa Runtime",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -23,25 +23,25 @@
     "postversion": "jq --argjson value \"$(jq '.version' package.json)\" '.version = $value' ../../package.json > tmp.json && mv tmp.json ../../package.json"
   },
   "dependencies": {
-    "@toa.io/bindings.amqp": "0.7.6-dev.16",
-    "@toa.io/bindings.http": "0.7.6-dev.16",
-    "@toa.io/bindings.loop": "0.7.5-dev.16",
-    "@toa.io/boot": "1.1.0-dev.2",
-    "@toa.io/bridges.node": "0.9.3-dev.16",
-    "@toa.io/cli": "1.1.0-dev.16",
-    "@toa.io/core": "1.1.0-dev.16",
-    "@toa.io/extensions.configuration": "1.1.0-dev.16",
-    "@toa.io/extensions.exposition": "0.8.3-dev.16",
-    "@toa.io/extensions.origins": "0.10.0-dev.16",
-    "@toa.io/extensions.sampling": "0.9.0-dev.14",
-    "@toa.io/extensions.state": "0.8.4-dev.16",
-    "@toa.io/norm": "1.1.0-dev.0",
-    "@toa.io/operations": "0.8.0-dev.0",
+    "@toa.io/bindings.amqp": "0.7.6-canary.1",
+    "@toa.io/bindings.http": "0.7.6-canary.1",
+    "@toa.io/bindings.loop": "0.7.5-canary.1",
+    "@toa.io/boot": "1.1.0-canary.1",
+    "@toa.io/bridges.node": "0.9.3-canary.1",
+    "@toa.io/cli": "1.1.0-canary.1",
+    "@toa.io/core": "1.1.0-canary.1",
+    "@toa.io/extensions.configuration": "1.1.0-canary.1",
+    "@toa.io/extensions.exposition": "0.8.3-canary.1",
+    "@toa.io/extensions.origins": "0.10.0-canary.1",
+    "@toa.io/extensions.sampling": "0.9.0-canary.1",
+    "@toa.io/extensions.state": "0.8.4-canary.1",
+    "@toa.io/norm": "1.1.0-canary.1",
+    "@toa.io/operations": "0.8.0-canary.1",
     "@toa.io/prototype": "0.6.0",
-    "@toa.io/storages.mongodb": "0.7.6-dev.16",
+    "@toa.io/storages.mongodb": "0.7.6-canary.1",
     "@toa.io/storages.null": "0.6.0",
-    "@toa.io/storages.sql": "0.7.6-dev.16",
-    "@toa.io/userland": "1.2.0-dev.16"
+    "@toa.io/storages.sql": "0.7.6-canary.1",
+    "@toa.io/userland": "1.2.0-canary.1"
   },
-  "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
+  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
