--- a/extensions/state/package.json
+++ b/extensions/state/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.state",
-  "version": "0.9.0-dev.0",
+  "version": "0.9.0-canary.0",
   "description": "Toa State",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -16,7 +16,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@toa.io/generic": "0.11.0-dev.0"
+    "@toa.io/generic": "0.11.0-canary.0"
   },
   "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
