--- a/libraries/concise/package.json
+++ b/libraries/concise/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/concise",
-  "version": "0.11.0-dev.0",
+  "version": "0.11.0-canary.0",
   "description": "Toa Concise Object Schema",
   "homepage": "https://toa.io",
   "author": {
@@ -23,11 +23,11 @@
   },
   "main": "source/index.js",
   "devDependencies": {
-    "@toa.io/tomato": "0.8.0-dev.0"
+    "@toa.io/tomato": "0.8.0-canary.0"
   },
   "dependencies": {
-    "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/yaml": "0.8.0-dev.0"
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/yaml": "0.8.0-canary.0"
   },
   "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
