--- a/libraries/kubernetes/package.json
+++ b/libraries/kubernetes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/kubernetes",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.0",
   "description": "Toa kubectl/kubectx wrapper",
   "homepage": "https://toa.io",
   "author": {
@@ -24,7 +24,7 @@
   "main": "source/index.js",
   "dependencies": {
     "@toa.io/command": "0.6.0",
-    "@toa.io/generic": "0.11.0-dev.0"
+    "@toa.io/generic": "0.11.0-canary.0"
   },
   "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
