--- a/libraries/tomato/package.json
+++ b/libraries/tomato/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/tomato",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.0",
   "description": "Gherkin Mock",
   "homepage": "https://toa.io",
   "author": {
@@ -27,7 +27,7 @@
     "randomstring": "*"
   },
   "dependencies": {
-    "@toa.io/generic": "0.11.0-dev.0"
+    "@toa.io/generic": "0.11.0-canary.0"
   },
   "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
 }
