--- a/userland/package.json
+++ b/userland/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/userland",
-  "version": "1.2.0-dev.0",
+  "version": "1.2.0-canary.0",
   "description": "Toa development kit",
   "homepage": "https://toa.io",
   "author": {
@@ -24,14 +24,14 @@
   "main": "src/index.js",
   "types": "types/index.d.ts",
   "dependencies": {
-    "@toa.io/boot": "1.1.0-dev.0",
-    "@toa.io/core": "1.1.0-dev.0",
-    "@toa.io/filesystem": "1.1.0-dev.0",
-    "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/norm": "1.1.0-dev.0",
-    "@toa.io/schemas": "0.9.0-dev.0",
+    "@toa.io/boot": "1.1.0-canary.0",
+    "@toa.io/core": "1.1.0-canary.0",
+    "@toa.io/filesystem": "1.1.0-canary.0",
+    "@toa.io/generic": "0.11.0-canary.0",
+    "@toa.io/norm": "1.1.0-canary.0",
+    "@toa.io/schemas": "0.9.0-canary.0",
     "@toa.io/storages.null": "0.6.0",
-    "@toa.io/yaml": "0.8.0-dev.0",
+    "@toa.io/yaml": "0.8.0-canary.0",
     "tap": "16.3.4"
   },
   "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
