feat(operations): add build options (#342)
Close #338

* feat(runtime): add `build` registry options

* ci: prerelease

 - @toa.io/bindings.amqp@0.8.0-canary.0
 - @toa.io/bindings.http@0.8.0-canary.0
 - @toa.io/bindings.loop@0.8.0-canary.0
 - @toa.io/bridges.node@0.10.0-canary.0
 - @toa.io/generics.amqp@0.9.0-canary.0
 - @toa.io/storages.mongodb@0.8.0-canary.0
 - @toa.io/storages.queues@0.8.0-canary.0
 - @toa.io/storages.sql@0.8.0-canary.0
 - @toa.io/extensions.configuration@1.1.0-canary.0
 - @toa.io/extensions.exposition@0.9.0-canary.0
 - @toa.io/extensions.origins@0.10.0-canary.0
 - @toa.io/extensions.sampling@0.9.0-canary.0
 - @toa.io/extensions.state@0.9.0-canary.0
 - @toa.io/concise@0.11.0-canary.0
 - @toa.io/conveyor@0.8.0-canary.0
 - @toa.io/filesystem@1.1.0-canary.0
 - @toa.io/generic@0.11.0-canary.0
 - @toa.io/kubernetes@0.8.0-canary.0
 - @toa.io/mock@0.8.0-canary.0
 - @toa.io/pointer@0.9.0-canary.0
 - @toa.io/schema@0.8.0-canary.0
 - @toa.io/schemas@0.9.0-canary.0
 - @toa.io/tomato@0.8.0-canary.0
 - @toa.io/yaml@0.8.0-canary.0
 - @toa.io/operations@0.8.0-canary.0
 - @toa.io/boot@1.1.0-canary.0
 - @toa.io/cli@1.1.0-canary.0
 - @toa.io/core@1.1.0-canary.0
 - @toa.io/norm@1.1.0-canary.0
 - @toa.io/runtime@0.8.0-canary.0
 - @toa.io/types@0.1.0-canary.0
 - @toa.io/userland@1.2.0-canary.0

* chore: release canary

* ci: prerelease

 - @toa.io/bindings.amqp@0.8.0-canary.1
 - @toa.io/bindings.http@0.8.0-canary.1
 - @toa.io/bindings.loop@0.8.0-canary.1
 - @toa.io/bridges.node@0.10.0-canary.1
 - @toa.io/generics.amqp@0.9.0-canary.1
 - @toa.io/storages.mongodb@0.8.0-canary.1
 - @toa.io/storages.queues@0.8.0-canary.1
 - @toa.io/storages.sql@0.8.0-canary.1
 - @toa.io/extensions.configuration@1.1.0-canary.1
 - @toa.io/extensions.exposition@0.9.0-canary.1
 - @toa.io/extensions.origins@0.10.0-canary.1
 - @toa.io/extensions.sampling@0.9.0-canary.1
 - @toa.io/extensions.state@0.9.0-canary.1
 - @toa.io/concise@0.11.0-ca

--- a/connectors/bindings.http/package.json
+++ b/connectors/bindings.http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/bindings.http",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.2",
   "description": "Toa HTTP Binding",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "@toa.io/console": "0.6.0",
-    "@toa.io/core": "1.1.0-dev.0",
+    "@toa.io/core": "1.1.0-canary.2",
     "agentkeepalive": "4.2.1",
     "express": "4.18.1",
     "node-fetch": "2.6.7"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
