--- a/connectors/bridges.node/package.json
+++ b/connectors/bridges.node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/bridges.node",
-  "version": "0.10.0-dev.0",
+  "version": "0.10.0-canary.2",
   "description": "Toa Node Bridge (inproc)",
   "homepage": "https://toa.io",
   "author": {
@@ -26,13 +26,13 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "1.1.0-dev.0",
-    "@toa.io/filesystem": "1.1.0-dev.0",
-    "@toa.io/generic": "0.11.0-dev.0",
+    "@toa.io/core": "1.1.0-canary.2",
+    "@toa.io/filesystem": "1.1.0-canary.2",
+    "@toa.io/generic": "0.11.0-canary.2",
     "fast-glob": "3.2.7"
   },
   "devDependencies": {
     "clone-deep": "4.0.1"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
