--- a/connectors/generics.amqp/package.json
+++ b/connectors/generics.amqp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/generics.amqp",
-  "version": "0.9.0-dev.0",
+  "version": "0.9.0-canary.2",
   "description": "Toa Generic AMQP Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,10 +20,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "1.1.0-dev.0",
-    "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/pointer": "0.9.0-dev.0",
+    "@toa.io/core": "1.1.0-canary.2",
+    "@toa.io/generic": "0.11.0-canary.2",
+    "@toa.io/pointer": "0.9.0-canary.2",
     "comq": "0.7.0"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
