--- a/connectors/storages.sql/package.json
+++ b/connectors/storages.sql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/storages.sql",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.2",
   "description": "Toa SQL Storage Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -23,11 +23,11 @@
   },
   "dependencies": {
     "@toa.io/console": "0.6.0",
-    "@toa.io/conveyor": "0.8.0-dev.0",
-    "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/pointer": "0.9.0-dev.0",
+    "@toa.io/conveyor": "0.8.0-canary.2",
+    "@toa.io/generic": "0.11.0-canary.2",
+    "@toa.io/pointer": "0.9.0-canary.2",
     "knex": "2.4.2",
     "pg": "8.9.0"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
