--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.exposition",
-  "version": "0.9.0-dev.0",
+  "version": "0.9.0-canary.2",
   "description": "Toa Resources Exposition",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -22,15 +22,15 @@
     "@types/express": "4.17.13"
   },
   "dependencies": {
-    "@toa.io/bindings.amqp": "0.8.0-dev.0",
+    "@toa.io/bindings.amqp": "0.8.0-canary.2",
     "@toa.io/console": "0.6.0",
-    "@toa.io/core": "1.1.0-dev.0",
-    "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/schema": "0.8.0-dev.0",
-    "@toa.io/yaml": "0.8.0-dev.0",
+    "@toa.io/core": "1.1.0-canary.2",
+    "@toa.io/generic": "0.11.0-canary.2",
+    "@toa.io/schema": "0.8.0-canary.2",
+    "@toa.io/yaml": "0.8.0-canary.2",
     "cors": "2.8.5",
     "express": "4.18.1",
     "path-to-regexp": "6.2.0"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
