--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.origins",
-  "version": "0.10.0-dev.0",
+  "version": "0.10.0-canary.2",
   "description": "Toa Origins",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,15 +19,15 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "1.1.0-dev.0",
-    "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/schemas": "0.9.0-dev.0",
-    "@toa.io/yaml": "0.8.0-dev.0",
+    "@toa.io/core": "1.1.0-canary.2",
+    "@toa.io/generic": "0.11.0-canary.2",
+    "@toa.io/schemas": "0.9.0-canary.2",
+    "@toa.io/yaml": "0.8.0-canary.2",
     "comq": "0.7.0",
     "node-fetch": "2.6.7"
   },
   "devDependencies": {
     "@types/node-fetch": "2.6.2"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
