--- a/libraries/conveyor/package.json
+++ b/libraries/conveyor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/conveyor",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.2",
   "description": "Toa Conveyor",
   "homepage": "https://toa.io",
   "author": {
@@ -23,7 +23,7 @@
   },
   "main": "source/index.js",
   "devDependencies": {
-    "@toa.io/generic": "0.11.0-dev.0"
+    "@toa.io/generic": "0.11.0-canary.2"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
