--- a/libraries/filesystem/package.json
+++ b/libraries/filesystem/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/filesystem",
-  "version": "1.1.0-dev.0",
+  "version": "1.1.0-canary.2",
   "description": "Toa Filesystem Tools",
   "homepage": "https://toa.io",
   "author": {
@@ -23,9 +23,9 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/generic": "0.11.0-dev.0",
+    "@toa.io/generic": "0.11.0-canary.2",
     "fast-glob": "3.2.12",
     "find-up": "5.0.0"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
