--- a/libraries/generic/package.json
+++ b/libraries/generic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/generic",
-  "version": "0.11.0-dev.0",
+  "version": "0.11.0-canary.2",
   "description": "Toa Generic Tools",
   "homepage": "https://toa.io",
   "author": {
@@ -25,5 +25,5 @@
   "dependencies": {
     "uuid": "9.0.0"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
