--- a/libraries/mock/package.json
+++ b/libraries/mock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/mock",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.2",
   "description": "Toa Mocks",
   "homepage": "https://toa.io",
   "author": {
@@ -23,11 +23,8 @@
   },
   "main": "source/index.js",
   "types": "types/index.d.ts",
-  "devDependencies": {
-    "@toa.io/norm": "1.1.0-dev.0"
-  },
   "dependencies": {
-    "@toa.io/generic": "0.11.0-dev.0"
+    "@toa.io/generic": "0.11.0-canary.2"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
