--- a/libraries/pointer/package.json
+++ b/libraries/pointer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/pointer",
-  "version": "0.9.0-dev.0",
+  "version": "0.9.0-canary.2",
   "description": "Toa Pointer",
   "homepage": "https://toa.io",
   "author": {
@@ -24,9 +24,9 @@
   "main": "source/index.js",
   "dependencies": {
     "@toa.io/console": "0.6.0",
-    "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/schemas": "0.9.0-dev.0",
-    "@toa.io/yaml": "0.8.0-dev.0"
+    "@toa.io/generic": "0.11.0-canary.2",
+    "@toa.io/schemas": "0.9.0-canary.2",
+    "@toa.io/yaml": "0.8.0-canary.2"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
