--- a/libraries/yaml/package.json
+++ b/libraries/yaml/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/yaml",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.2",
   "description": "Toa YAML",
   "homepage": "https://toa.io",
   "author": {
@@ -23,12 +23,12 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/filesystem": "1.1.0-dev.0",
-    "@toa.io/generic": "0.11.0-dev.0",
+    "@toa.io/filesystem": "1.1.0-canary.2",
+    "@toa.io/generic": "0.11.0-canary.2",
     "js-yaml": "4.1.0"
   },
   "devDependencies": {
     "@types/js-yaml": "4.0.5"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
