--- a/operations/package.json
+++ b/operations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/operations",
-  "version": "0.8.0-dev.0",
+  "version": "0.8.0-canary.2",
   "description": "Toa Deployment",
   "homepage": "https://toa.io",
   "author": {
@@ -26,10 +26,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/filesystem": "1.1.0-dev.0",
-    "@toa.io/generic": "0.11.0-dev.0",
-    "@toa.io/yaml": "0.8.0-dev.0",
+    "@toa.io/filesystem": "1.1.0-canary.2",
+    "@toa.io/generic": "0.11.0-canary.2",
+    "@toa.io/yaml": "0.8.0-canary.2",
     "execa": "5.1.1"
   },
-  "gitHead": "d99f2da96b204c60f51eecc6ed2daa3876e23258"
+  "gitHead": "881065788070a30eb6b0a5d22b26de12bc2589fc"
 }
