--- a/connectors/bindings.amqp/package.json
+++ b/connectors/bindings.amqp/package.json
@@ -18,13 +18,10 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "devDependencies": {
-    "@toa.io/mock": "0.7.0"
-  },
   "dependencies": {
-    "@toa.io/console": "0.6.0",
+    "@toa.io/console": "0.20.0-dev.1",
     "@toa.io/core": "0.20.0-dev.1",
-    "@toa.io/generic": "0.11.0-dev.3",
+    "@toa.io/generic": "0.20.0-dev.1",
     "@toa.io/generics.amqp": "0.20.0-dev.1",
     "@toa.io/pointer": "0.20.0-dev.1"
   },
