--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -19,9 +19,9 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/console": "0.6.0",
+    "@toa.io/console": "0.20.0-dev.1",
     "@toa.io/core": "0.20.0-dev.1",
-    "@toa.io/generic": "0.11.0-dev.3",
+    "@toa.io/generic": "0.20.0-dev.1",
     "@toa.io/pointer": "0.20.0-dev.1",
     "mongodb": "4.13.0"
   },
