--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -23,9 +23,9 @@
   },
   "dependencies": {
     "@toa.io/bindings.amqp": "0.20.0-dev.1",
-    "@toa.io/console": "0.6.0",
+    "@toa.io/console": "0.20.0-dev.1",
     "@toa.io/core": "0.20.0-dev.1",
-    "@toa.io/generic": "0.11.0-dev.3",
+    "@toa.io/generic": "0.20.0-dev.1",
     "@toa.io/schema": "0.20.0-dev.1",
     "@toa.io/yaml": "0.20.0-dev.1",
     "cors": "2.8.5",
