--- a/libraries/pointer/package.json
+++ b/libraries/pointer/package.json
@@ -23,8 +23,8 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/console": "0.6.0",
-    "@toa.io/generic": "0.11.0-dev.3",
+    "@toa.io/console": "0.20.0-dev.1",
+    "@toa.io/generic": "0.20.0-dev.1",
     "@toa.io/schemas": "0.20.0-dev.1",
     "@toa.io/yaml": "0.20.0-dev.1"
   },
