--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -22,8 +22,8 @@
     "@toa.io/runtime": "*"
   },
   "dependencies": {
-    "@toa.io/console": "0.6.0",
-    "@toa.io/generic": "0.11.0-dev.3",
+    "@toa.io/console": "0.20.0-dev.1",
+    "@toa.io/generic": "0.20.0-dev.1",
     "@toa.io/kubernetes": "0.20.0-dev.1",
     "@toa.io/norm": "0.20.0-dev.1",
     "@toa.io/yaml": "0.20.0-dev.1",
