--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@rsql/parser": "1.2.4",
-    "@toa.io/console": "0.6.0",
-    "@toa.io/generic": "0.11.0-dev.3",
+    "@toa.io/console": "0.20.0-dev.1",
+    "@toa.io/generic": "0.20.0-dev.1",
     "@toa.io/yaml": "0.20.0-dev.1",
     "clone-deep": "4.0.1"
   },
