feat(cli): add `--context` as a path to a context for `compose` and `replay`

--- a/features/steps/.workspace/context.toa.yaml
+++ b/features/steps/.workspace/context.toa.yaml
@@ -1,12 +1,20 @@
 name: collection
 version: 0.0.0
 packages: 'components/*'
+runtime:
+  registry@broken-runtime: no://where
+  proxy@broken-runtime: no://where
 registry:
+  build@broken-build:
+    run: no-such-command
   base: localhost:5000
   platforms: ~
+
 amqp: amqp://localhost
 amqp@docker: amqp://host.docker.internal
+
 mongodb: mongodb://localhost
 mongodb@docker: mongodb://host.docker.internal
+
 sql: pg://localhost
 sql@docker: pg://host.docker.internal
