--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -27,6 +27,7 @@
     "@toa.io/kubernetes": "0.20.0-dev.4",
     "@toa.io/norm": "0.20.0-dev.4",
     "@toa.io/yaml": "0.20.0-dev.4",
+    "dotenv": "16.1.1",
     "find-up": "5.0.0",
     "yargs": "17.6.2"
   },
