refactor(operations): update extension's deployment name

--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -4,7 +4,7 @@
   "description": "Toa Resources Exposition",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
-  "main": "src/index.js",
+  "main": "source/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toa-io/toa.git"
