--- a/operations/src/deployment/chart/templates/services.yaml
+++ b/operations/src/deployment/chart/templates/services.yaml
@@ -7,14 +7,14 @@ spec:
   replicas: {{ .replicas | default 2 }}
   selector:
     matchLabels:
-      toa.io/service: {{ .name }}
+      toa.io/service: extensions-{{ .name }}
   template:
     metadata:
       labels:
-        toa.io/service: {{ .name }}
+        toa.io/service: extensions-{{ .name }}
     spec:
       containers:
-        - name: {{ .name }}
+        - name: extensions-{{ .name }}
           image: {{ .image }}
           {{- if $.Values.variables }}
           env:
@@ -26,11 +26,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-{{ .name }}
+  name: extensions-{{ .name }}
 spec:
   type: ClusterIP
   selector:
-    toa.io/service: {{ .name }}
+    toa.io/service: extensions-{{ .name }}
   ports:
     - name: port-{{ .port }}
       protocol: TCP
@@ -41,7 +41,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .name }}
+  name: extensions-{{ .name }}
   {{- if .ingress.annotations }}
   annotations:
 {{ toYaml .ingress.annotations | indent 4 }}
@@ -58,7 +58,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: service-{{ .name }}
+                name: extensions-{{ .name }}
                 port:
                   number: 8000
 {{- end }}
