--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "bin": {
     "toa": "runtime/runtime/bin/toa"
   },
+  "peerDependencies": {
+    "typescript": "^4.9.5"
+  },
   "devDependencies": {
     "@babel/eslint-parser": "7.17.0",
     "@commitlint/cli": "14.1.0",
@@ -40,6 +43,7 @@
     "@types/node": "18.0.0",
     "clone-deep": "4.0.1",
     "dotenv": "16.0.3",
+    "eslint-config-standard-with-typescript": "35.0.0",
     "execa": "5.1.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
@@ -47,7 +51,8 @@
     "node-fetch": "2.6.7",
     "randomstring": "1.2.3",
     "snazzy": "9.0.0",
-    "standard": "17.0.0"
+    "standard": "17.0.0",
+    "ts-jest": "29.1.0"
   },
   "scripts": {
     "prepare": "npx husky install",
@@ -78,9 +83,14 @@
     ],
     "globals": [
       "AbortController"
+    ],
+    "ignore": [
+      "**/transpiled"
     ]
   },
   "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
     "roots": [
       "<rootDir>/runtime",
       "<rootDir>/connectors",
@@ -95,5 +105,11 @@
       "**/(*.)+(test).js"
     ],
     "bail": true
+  },
+  "eslintConfig": {
+    "extends": "standard-with-typescript",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    }
   }
 }
