--- a/extensions/exposition/tsconfig.json
+++ b/extensions/exposition/tsconfig.json
@@ -2,5 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./transpiled"
-  }
+  },
+  "include": [
+    "source"
+  ]
 }
