--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
     "target": "es6",
     "sourceMap": true,
     "declaration": true,
     "esModuleInterop": true,
-    "strict": true,
     "skipLibCheck": true,
-    "incremental": true
+    "incremental": true,
+    "strict": true,
+    "experimentalDecorators": true
   },
   "exclude": [
     "**/*.test.ts",
