--- a/libraries/generic/package.json
+++ b/libraries/generic/package.json
@@ -22,6 +22,7 @@
     "access": "public"
   },
   "main": "source/index.js",
+  "types": "types/index.d.ts",
   "dependencies": {
     "uuid": "9.0.0"
   },
