--- a/features/steps/.workspace/components/collection/exposed.one/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/exposed.one/manifest.toa.yaml
@@ -4,9 +4,7 @@ namespace: dummies
 entity:
   storage: ~
   schema:
-    foo:
-      type: integer
-      default: 0
+    foo: 0
     bar: string
 
 operations:
