test: fix tests

--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "testMatch": [
       "**/(*.)+(test).(js|ts)"
     ],
+    "testPathIgnorePatterns": [
+      ".*\/transpiled\/"
+    ],
     "bail": true
   }
 }
